[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Actors/Beam.gd" type="Script" id=1]
[ext_resource path="res://Assets/PlayerItems/MetalBar.png" type="Texture" id=2]
[ext_resource path="res://src/Actors/BeamBSM.gd" type="Script" id=3]
[ext_resource path="res://Assets/Debug_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://src/Actors/BeamResetSM.gd" type="Script" id=5]
[ext_resource path="res://src/Actors/BeamMoveSM.gd" type="Script" id=6]

[node name="Beam" type="RigidBody2D"]
z_index = 4
mode = 2
mass = 65535.0
gravity_scale = 0.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
engine_thrust = 50
spin_thrust = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
build_mode = 1
polygon = PoolVector2Array( -323.957, -4.737, -302.251, -4.73659, -302.251, -31.489, -295.792, -31.4887, -295.792, -4.737, 295.792, -4.737, 295.792, -31.489, 302.251, -31.489, 302.251, -4.737, 323.957, -4.737, 323.957, 4.82293, -323.936, 4.7267 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="LeftSide" type="Position2D" parent="Sprite"]
position = Vector2( -299, 0 )

[node name="RightSide" type="Position2D" parent="Sprite"]
position = Vector2( 299, 0 )

[node name="BasicStateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="State" type="Label" parent="."]
visible = false
margin_left = -41.1346
margin_top = 24.8993
margin_right = 41.8654
margin_bottom = 38.8993
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "?"
align = 1

[node name="ResetStateMachine" type="Node" parent="."]
script = ExtResource( 5 )

[node name="MovementStateMachine" type="Node" parent="."]
script = ExtResource( 6 )
